--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ build-iPhoneSimulator/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/coverage
+# Ignore application configuration
+/config/application.yml
