--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs: # a collection of steps
   build-and-test: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
-      - image: circleci/ruby:2.7.2 # if you're using ruby version >= 3.0, use cimg/ruby:3.x.y 
+      - image: circleci/ruby:2.7.4 # if you're using ruby version >= 3.0, use cimg/ruby:3.x.y 
         environment: # environment variables for primary container
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
@@ -13,10 +13,10 @@ jobs: # a collection of steps
           PGHOST: 127.0.0.1
           PGUSER: postgres
           RAILS_ENV: test
-      - image: circleci/postgres:11 # database image
+      - image: circleci/postgres:14 # database image
         environment: # environment variables for database, it is kind of obvious but it is important that they match with your test config in database.yml
           POSTGRES_USER: postgres
-          POSTGRES_DB: <Insert the name of your testing database, for example, cool_new_app_test>
+          POSTGRES_DB: DiscoverIt-2208-BE_test
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
       # Which version of bundler?
