--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1 # use CircleCI 2.1
 orbs:
-   node: circleci/node@5.0.0 # Needed for javascript runtime
-   heroku: circleci/heroku@1.0.1 # Use the Heroku orb in your config
+   node:  cimg/node@5.0.0 # Needed for javascript runtime
+   heroku:  cimg/heroku@1.0.1 # Use the Heroku orb in your config
 jobs: # a collection of steps
   build-and-test: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
-      - image: circleci/ruby:2.7.4 # if you're using ruby version >= 3.0, use cimg/ruby:3.x.y 
+      - image:  cimg/ruby:2.7.4 # if you're using ruby version >= 3.0, use cimg/ruby:3.x.y 
         environment: # environment variables for primary container
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
