Add entry to gitignore to not track a local rake task I use for killing db connections when I run into certain errors.

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ build-iPhoneSimulator/
 /coverage
 # Ignore application configuration
 /config/application.yml
+/lib/tasks/kill_postgres_connections.rake
