Install and set up graphql and graphiql, set up a simple User.all query, start work on query by id

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,10 @@ build-iPhoneSimulator/
 /log
 log
 log/development.log
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
