--- a/package.json
+++ b/package.json
@@ -1,13 +1,1 @@
-{ "name": "discoverit-2208-be",
-  "private": true,
-  "devDependencies": {
-    "webpack-dev-server": "^4.11.1"
-  },
-  "dependencies": {
-    "@babel/preset-react": "^7.18.6",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
-}
+{"name":"discoverit-2208-be","private":true,"devDependencies":{"webpack-dev-server":"^4.11.1"},"dependencies":{"@babel/preset-react":"^7.18.6","babel-plugin-transform-react-remove-prop-types":"^0.4.24","prop-types":"^15.8.1","react":"^18.2.0","react-dom":"^18.2.0","yarn":"^1.22.19"}}
