tried to set up graphql

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ build-iPhoneSimulator/
 # Ignore application configuration
 /config/application.yml
 /lib/tasks/kill_postgres_connections.rake
-/log
+log/*
 /public/packs
 /public/packs-test
 /node_modules
